# CV-And-Lidar-Obstacle-Detection

./: README.md
obstacleimage/: CMakeLists.txt  README.md  package.xml
obstacleimage/src/: imageCreation.cpp
src/: vision.cpp
transforms/: CMakeLists.txt  package.xml
transforms/src/: listener.cpp  listener.cpp.bak  transform.py
vision/: CMakeLists.txt  CMakeLists.txt.ignore  README.md  alignCamera2.py  package.xml  setup.py
vision/scripts/: alignCamera2.py  alignCameras.py
vision/src/: alignTest.py  camera.cu  vision.cpp
vision/vision/: alignCameras.py
